[build-system]
requires = ["setuptools>=77.0.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "exchange_calendars"
description = "Calendars for securities exchanges"
authors = [
  {email = "gerrymanoim@gmail.com"},
  {name = "Gerry Manoim"}
]
readme = "README.md"
license = "APSL-2.0"
keywords = ["finance", "security", "calendar", "exchange"]
requires-python = "~=3.10"
classifiers = [
	"Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "pyluach",
    "toolz",
    "tzdata",
    "korean_lunar_calendar",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "hypothesis",
    "pytest==8.3.5",
    "pytest-benchmark",
    "pytest-xdist",
    "pip-tools",
    "ruff",
]

[project.scripts]
ecal = "exchange_calendars.ecal:main"

[project.urls]
homepage = "https://github.com/gerrymanoim/exchange_calendars"
documentation = "https://github.com/gerrymanoim/exchange_calendars/tree/master/docs"
"Issue Tracker" = "https://github.com/gerrymanoim/exchange_calendars/issues"
"Source Code" = "https://github.com/gerrymanoim/exchange_calendars"

[tool.setuptools.packages.find]
include = ["exchange_calendars", "exchange_calendars.*"]

[tool.setuptools_scm]
write_to = "exchange_calendars/_version.py"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
show_error_codes = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-v --doctest-modules --durations=15"
testpaths = [
    "tests",
    "exchange_calendars/utils/pandas_utils.py"
]

# Settings for tools previously used by project
[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]

[tool.flake8]
max-line-length = 88
ignore = ["E203", "E501", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "versioneer.py",
    "exchange_calendars/_version.py"
]