[build-system]
requires = ["setuptools>=77.0.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "exchange_calendars"
description = "Calendars for securities exchanges"
authors = [
  {email = "gerrymanoim@gmail.com"},
  {name = "Gerry Manoim"}
]
readme = "README.md"
license = "APSL-2.0"
keywords = ["finance", "security", "calendar", "exchange"]
requires-python = ">=3.10, <4"
classifiers = [
	"Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.26.4",
    "pandas>=1.5.0",
    "pyluach>=2.3.0",
    "toolz>=1.0.0",
    "tzdata>=2025.2",
    "korean_lunar_calendar>=0.3.1",
]
dynamic = ["version"]

# Include minimum versions for 'minimum envionment' test in test workflow.
[dependency-groups]
test = [
    "hypothesis>=6.140.3",
    "pytest>=8.4.2",
    "pytest-benchmark>=5.1.0",
    "pytest-xdist>=3.8.0",
]
test_min = [
    {include-group = "test"},
    "numpy==1.26.4",
]
# Separate group required for test jobs running on python 3.13.
# Should be able to remove this provision once numpy and pandas officially support python 3.13, allowing uv to resolve accordingly
test_py13 = [
    {include-group = "test"},
    "numpy>=2.1; python_version<'3.13'",
    "numpy>=2.3.3; python_version>='3.13'",
    "pandas>=2.3; python_version>='3.13'",
]

dev = [
    {include-group = "test"},
    "pre-commit >=4.3.0",
    # "ruff",  # use local standalone install or ruff extension for editor.
]

[project.scripts]
ecal = "exchange_calendars.ecal:main"

[project.urls]
homepage = "https://github.com/gerrymanoim/exchange_calendars"
documentation = "https://github.com/gerrymanoim/exchange_calendars/tree/master/docs"
"Issue Tracker" = "https://github.com/gerrymanoim/exchange_calendars/issues"
"Source Code" = "https://github.com/gerrymanoim/exchange_calendars"

[tool.uv]
trusted-publishing = "always"
conflicts = [
    [
      { group = "test_min" },
      { group = "test_py13" },
    ],
]

[tool.setuptools.packages.find]
include = ["exchange_calendars", "exchange_calendars.*"]

[tool.setuptools_scm]
write_to = "exchange_calendars/_version.py"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.mypy]
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
show_error_codes = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-v --doctest-modules --durations=15"
testpaths = [
    "tests",
    "exchange_calendars/utils/pandas_utils.py"
]

# Settings for tools previously used by project
[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]

[tool.flake8]
max-line-length = 88
ignore = ["E203", "E501", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "versioneer.py",
    "exchange_calendars/_version.py"
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
