[metadata]
description-file = README.md
license_file = LICENSE

[tool:pytest]
addopts = -v --doctest-modules --durations=15 --capture=no

testpaths = 
    tests
    exchange_calendars/utils/pandas_utils.py

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
[versioneer]
VCS = git
style = pep440
versionfile_source = exchange_calendars/_version.py
versionfile_build = exchange_calendars/_version.py
tag_prefix = ""
parentdir_prefix = exchange_calendars-

[flake8]
max-line-length = 88
ignore = E203, E501, W503
exclude =
    .git,
    __pycache__,
    versioneer.py
