[metadata]
name = exchange_calendars
version = attr: versioneer.get_version
cmdclass = attr: versioneer.get_cmdclass
author = Gerry Manoim
author_email = gerrymanoim@gmail.com
description = Calendars for securities exchanges
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2.0
license_files = LICENSE.txt
url = https://github.com/gerrymanoim/exchange_calendars
project_urls =
	Bug Tracker = https://github.com/gerrymanoim/exchange_calendars/issues
	Source Code = https://github.com/gerrymanoim/exchange_calendars
keywords = finance, security, calendar, exchange
classifiers =
	Development Status :: 4 - Beta
    # Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Operating System :: OS Independent

[options]
packages = find:
python_requires = ~=3.8
include_package_data = True
install_requires =
    numpy
    pandas >= 1.1
    pyluach
    python-dateutil
    pytz
    toolz
    korean_lunar_calendar

[options.packages.find]
include =
    exchange_calendars
    exchange_calendars.*

[options.extras_require]
dev =
    flake8
    hypothesis
    pytest
    pytest-benchmark
    pytest-xdist
    pip-tools

[options.entry_points]
console_scripts =
    ecal = exchange_calendars.ecal:main

[tool:pytest]
addopts = -v --doctest-modules --durations=15

testpaths =
    tests
    exchange_calendars/utils/pandas_utils.py

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
[versioneer]
VCS = git
style = pep440
versionfile_source = exchange_calendars/_version.py
versionfile_build = exchange_calendars/_version.py
tag_prefix = ""
parentdir_prefix = exchange_calendars-

[flake8]
max-line-length = 88
ignore = E203, E501, W503
exclude =
    .git,
    __pycache__,
    versioneer.py

[mypy]
warn_unreachable = True
warn_redundant_casts = True
warn_unused_ignores = True
strict_equality = True
show_error_codes = True
ignore_missing_imports = True
